--- a/src/app/components/announcement/announcement.component.html
+++ b/src/app/components/announcement/announcement.component.html
@@ -4,7 +4,9 @@
 <div class="addann">
   <button class="addButton"><a [routerLink]="['../../addAnnouncementt']" style='text-decoration:none;'>Add announcement</a></button>
 </div>
-
+<div class="addAnnouncement">
+  <button class="addButton"><a [routerLink]="['../../mineAnnouncement']" style='text-decoration:none;'>Mine announcement</a></button>
+</div>
 
  
 <div class="levi ex3">
