--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -63,7 +63,7 @@
 
             </div>
           
-            <div class="column right ex3" style="background-color:lightblue;">
+            <div class="column right" style="background-color:lightblue;">
                   
                 <label class="label3">Edit password</label>
                 <div >
