--- a/src/app/components/cinemalog/cinemalog.component.scss
+++ b/src/app/components/cinemalog/cinemalog.component.scss
@@ -19,6 +19,12 @@ hr {
     font-size: 0.5cm;
 }
 
+.labelp{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.5cm;
+    margin-left: 1.4cm; 
+}
+
 .table{
     font-size: 0.6cm;
     background-color: lightblue;
@@ -39,10 +45,12 @@ hr {
 
 .left {
   width: 18cm;
+  height: 15cm;
 }
 
 .right {
   width: 14cm;
+  height: 20cm;
 }
 
 /* Clear floats after the columns */
@@ -65,7 +73,7 @@ hr {
 }
 
 .space1{
-    height: 1.5cm;
+    height: 0.8cm;
 }
 
 div.ex3 {
