--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -20,6 +20,13 @@
 .buttonL{
     background: rgb(235, 158, 16);
     margin-top: 10px;
-    margin-left: 90em;
+    margin-left: 1em;
+    font-size: 1em;
+}
+
+.buttonN{
+    background: rgb(235, 158, 16);
+    margin-top: 10px;
+    margin-left: 80em;
     font-size: 1em;
 }
