--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
         
     </div>
 
-    
+        <button class="buttonN"><a [routerLink]="['notification']" style='text-decoration:none;'>Notification</a></button>
         <button class="buttonL" (click)="logoutFun()">Logout</button>
     
 
