--- a/src/app/components/cinemalog/cinemalog.component.scss
+++ b/src/app/components/cinemalog/cinemalog.component.scss
@@ -50,7 +50,7 @@ hr {
 
 .right {
   width: 14cm;
-  height: 20cm;
+  height: 21cm;
 }
 
 /* Clear floats after the columns */
@@ -65,6 +65,12 @@ hr {
     padding: 10px;
     height: 400px; /* Should be removed. Only for demonstration */
 }
+
+.column1{
+    float: left;
+}
+
+
 
 .space{
     width: 120px;
@@ -93,9 +99,38 @@ div.ex3 {
     background-color: blueviolet;
     width: 120px;
     height: 120px;
+    margin-top: 0cm;
+    
 }
 
 .but{
     width:30px;
     height: 30px;
+}
+
+.submit{
+    margin-top: -2cm; 
+    margin-left: 9cm;
+    width: 90px;
+    height: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.5cm;
+    
+}
+
+.i{
+   
+    width: 330px;
+    height: 150px;
+
+}
+
+.okk{
+    
+}
+
+.se{
+    width: 60px;
+    height: 40px;
+    background-color: brown;
 }
