--- a/src/app/components/announcement/announcement.component.scss
+++ b/src/app/components/announcement/announcement.component.scss
@@ -16,7 +16,7 @@
 
 .levi{
     display: inline-block;
-    background: rgb(214, 255, 30);
+    background: #45beee;
     width: 430px;
     height: 560px;
     margin-top: 0px;
@@ -86,7 +86,7 @@ div.ex3 {
     
     width: 700px;
     height: 150px;
-    background: rgb(214, 255, 30);
+    background: #45beee;
     margin-left: 20px;
 }
 
