--- a/src/app/components/fanzone/fanzone.component.scss
+++ b/src/app/components/fanzone/fanzone.component.scss
@@ -16,7 +16,7 @@
 }
 
 .right{
-    background: #fffb11;
+    background-color: lightblue;
     width: 85%;
     height: 700px;
     border: inset 2px;
