--- a/src/app/components/edit-thematic-props/edit-thematic-props.component.scss
+++ b/src/app/components/edit-thematic-props/edit-thematic-props.component.scss
@@ -16,14 +16,14 @@
 }
 
 .left{
-    background: #4af706;
+    background-color: lightblue;
     width: 30%;
     height: 550px;
     margin-top: 30px;
 }
 
 .right{
-    background: #0940d8;
+    background-color: lightblue;
     width: 60%;
     height: 600px;
     border: inset 2px;
@@ -49,7 +49,7 @@ div.ex3 {
 .levo{
     width: 250px;
     height: 30px;
-    background: #21e60f;
+    background: #07abec;
     margin-left: 0px;
     margin-top: 6px;
     display: inline-block;
