--- a/src/app/components/reservation/reservation.component.scss
+++ b/src/app/components/reservation/reservation.component.scss
@@ -93,3 +93,15 @@ div.ex3 {
     margin-left: 1cm;
     margin-right: 5cm;
 }
+
+.slova{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.5cm;
+    
+}
+
+.slova1{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.5cm;
+    display: inline;
+}
