--- a/src/app/components/officialstore/officialstore.component.html
+++ b/src/app/components/officialstore/officialstore.component.html
@@ -1,5 +1,12 @@
 <div>
 
+  <div class="addTP">
+
+    <button class="btnadd" ><a [routerLink]="['../../addthematicprops']" style='text-decoration:none;'>Add thematic props</a></button>
+    <button class="btnadd" ><a [routerLink]="['../../editthematicprops']" style='text-decoration:none'>Edit thematic props</a></button>
+
+
+  </div>
 
   <ul *ngFor="let prop of props">
     
