--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="u?.adminFchangep==='yes'">
     <div>
         <h1 class="header">Home page</h1>
     </div>
@@ -57,8 +57,15 @@
       <div class="column right ex3" style="background-color:lightblue;">
         
             <label class="label2">History of visit</label>
-            <div class="visit">
-
+            <div class="visit ex3">
+                <ul *ngFor="let reservation of reservationss" type="square" class="ul" > 
+                    <li><p><span class="slova" > {{reservation.projectionA}}</span> <br> <span class="cinema2">({{reservation.dateA}}, {{reservation.projectionterm.term}})  </span> </p> </li>
+                    <div class="slova">Reserved seats:
+                        <p class="slova1" *ngFor="let seats of reservation.seats" > {{seats.ordinal}}</p>     
+                    </div>
+                    
+                  </ul>
+                
             </div>
         
 
