--- a/src/app/components/mine-notification/mine-notification.component.html
+++ b/src/app/components/mine-notification/mine-notification.component.html
@@ -25,7 +25,7 @@
 
   <div class="space"></div>
 
-  <div class="desni">
+  <div *ngIf="user?.role==='adminF'" class="desni">
 
     <h4 align="center">Approval announcement</h4>
 
