--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -30,3 +30,50 @@
     margin-left: 80em;
     font-size: 1em;
 }
+
+.right {
+    width: 16cm;
+    height: 11cm;
+}
+
+.column {
+    float: left;
+    padding: 10px;
+    height: 400px; /* Should be removed. Only for demonstration */
+}
+
+.label3{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1cm;
+    margin-left: 3.7cm;
+    margin-top: 7cm;
+}
+
+.space1{
+    height: 1.2cm;
+}
+
+.label{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.5cm;
+    margin-left: 2.2cm;
+}
+
+.in{
+    width: 160px;
+    height: 30px;
+}
+
+.space2{
+    height: 0.3cm;
+}
+
+.submit{
+    width: 110px;
+    height: 38px;
+    margin-left: 7em;
+    margin-top: 2em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.5cm;
+    
+}
