--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -27,8 +27,19 @@
 .buttonN{
     background: rgb(235, 158, 16);
     margin-top: 10px;
-    margin-left: 80em;
+    margin-left: 68em;
     font-size: 1em;
+}
+
+.buttonA{
+    background: rgb(235, 158, 16);
+    margin-top: 10px;
+    font-size: 1em;
+}
+
+.pom{
+    width: 200px;
+    display: inline-block;
 }
 
 .right {
