--- a/src/app/components/scale/scale.component.html
+++ b/src/app/components/scale/scale.component.html
@@ -9,7 +9,7 @@
 
     <div class="space"></div>
 
-    <div class="desni">
+    <div *ngIf="u?.role==='adminS'" class="desni">
 
         <h4 align="center">Add scale</h4>
         <div class="label">
