--- a/src/app/components/scale/scale.component.scss
+++ b/src/app/components/scale/scale.component.scss
@@ -55,3 +55,30 @@
     width: 70px;
     height: 25;
 }
+
+.gold{
+    margin-top: 30px;
+    margin-left: 50px;
+    background: #fffc31;
+    width: 500px;
+    height: 100;
+    font-size: 1.1em;
+}
+
+.silver{
+    margin-top: 30px;
+    margin-left: 50px;
+    background: #a7a6a1;
+    width: 500px;
+    height: 100;
+    font-size: 1.1em;
+}
+
+.bronze{
+    margin-top: 30px;
+    margin-left: 50px;
+    background: #f3a633;
+    width: 500px;
+    height: 100;
+    font-size: 1.1em;
+}
