--- a/src/app/components/reservation/reservation.component.scss
+++ b/src/app/components/reservation/reservation.component.scss
@@ -105,3 +105,13 @@ div.ex3 {
     font-size: 0.5cm;
     display: inline;
 }
+
+.remove{
+    width: 5cm;
+}
+
+.label3{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.7cm;
+    margin-left: 0.7cm;
+}
