--- a/src/app/components/welcomepage/welcomepage.component.html
+++ b/src/app/components/welcomepage/welcomepage.component.html
@@ -46,5 +46,8 @@
   </div>
 
 
- 
+
+
+  <img id="uploadPreview" style="width: 100px; height: 100px;" />
+<input id="uploadImage" type="file" name="myPhoto" onchange="PreviewImage();" />
 </div>
