--- a/src/app/components/add-announcement/add-announcement.component.html
+++ b/src/app/components/add-announcement/add-announcement.component.html
@@ -26,7 +26,8 @@
               
               <div class="div">
                 <p class="text">Picture</p>
-               
+                <img id="uploadPreview" style="width: 100px; height: 100px;" />
+                <input id="uploadImage" type="file" name="myPhoto" onchange="PreviewImage();" />
   
               </div>
             
