--- a/src/app/components/adminsystem/adminsystem.component.scss
+++ b/src/app/components/adminsystem/adminsystem.component.scss
@@ -2,7 +2,7 @@
     margin-top: 30px;
     width:600px;
     background-color: lightblue;
-    height: 600px;
+    height: 900px;
     display: inline-block;
     margin-left: 20px;
     vertical-align: top;
@@ -59,6 +59,14 @@
 
 .dugmeC{
     margin-left: 430px;
-    margin-top: 44px;
+   
     font-size: 1.1em;
 }
+.googlemaps{
+    margin-top: 15px
+}
+agm-map{
+    width: 600px;
+     height: 390px;
+     margin-top: 10px;
+ }
