--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -59,7 +59,7 @@
             <label class="label2">History of visit</label>
             <div class="visit ex3">
                 <ul *ngFor="let reservation of reservationss" type="square" class="ul" > 
-                    <li><p><span class="slova" > {{reservation.projectionA}}</span> <br> <span class="cinema2">({{reservation.dateA}}, {{reservation.projectionterm.term}})  </span> </p> </li>
+                    <li><p><span class="slova" >{{reservation.nameC}}:<br> {{reservation.projectionA}}</span> <br> <span class="cinema2">({{reservation.dateA}}, {{reservation.projectionterm.term}})  </span> </p> </li>
                     
                     
                   </ul>
