--- a/src/app/components/theatre/theatre.component.html
+++ b/src/app/components/theatre/theatre.component.html
@@ -10,5 +10,14 @@
         
     </ul>
     
-    <agm-map [longitude]="longitude" [latitude]="latitude"></agm-map>
+    <agm-map [longitude]="longitude" [latitude]="latitude">
+      <ul *ngFor="let cinema of theatres">
+        <agm-marker [longitude]="cinema.longitude" [latitude]="cinema.latitude">
+          <agm-info-window>
+            <h2>{{cinema.name}}</h2>
+            <p>{{cinema.address}}</p>
+          </agm-info-window>
+        </agm-marker>
+      </ul>
+    </agm-map>
 </div>
