--- a/src/app/components/friends/friends.component.scss
+++ b/src/app/components/friends/friends.component.scss
@@ -1,95 +1,54 @@
-.header{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-top: 0cm;
+.levi{
+    background: blueviolet;
+    width: 600px;
+    height: 600px;
+    display: inline-block;
+    margin-top: 22px;
+    margin-left: 15px;
 }
 
-hr {
-    border: 0.4px solid #f1f1f1;
-    margin-bottom: 25px;
-    margin-top: 0cm;
+.space{
+    width: 100px;
+    display: inline-block;
 }
 
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+.desni{
+    background: rgb(43, 226, 43);
+    width: 600px;
+    height: 600px;
+    display: inline-block;
+    margin-top: 22px;
+    margin-left: 15px;
+    vertical-align: top;
 }
 
-.column {
-    float: left;
-    padding: 10px;
-    height: 400px; /* Should be removed. Only for demonstration */
+.requests{
+    width: 580px;
+    height: 530px;
+    margin-top: 30px;
+    background: brown;
+    margin-left: 10px;
+
 }
 
-.left {
-    width: 21cm;
-    height: 15cm;
-}
-
-.right {
-    width: 15cm;
-    height: 15cm;
-}
-
-* {
-    box-sizing: border-box;
+.request{
+    font-size: 1.1em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 div.ex3 {
     overflow: auto;
 }
 
-.space{
-    width: 120px;
-    background: #2E9CE6;
-    
+.friends{
+    width: 580px;
+    height: 530px;
+    margin-top: 30px;
+    background: rgb(199, 54, 54);
+    margin-left: 10px;
 }
 
-.label{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 0.5cm;
-    margin-left: 1.4cm;
-    margin-right: 0.5cm;
-    padding: 0.2cm;
-    
-}
-
-.label1{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1cm;
-    margin-left: 2.0cm;
-}
-
-.label2{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1cm;
-    margin-left: 1cm;
-}
-
-
-.space1{
-    height: 1.2cm;
-}
-
-.in{
-    width: 160px;
-    height: 30px;
-    
-}
-
-.space2{
-    height: 0.3cm;
-}
-
-.visit{
-    height: 300px;
-    width: 250px;
-    background-color:white;
-    margin-top: 1cm;
-    margin-left: 1cm;
-}
-
-.f{
-    margin-left: 1cm;
-    margin-right: 5cm;
+.friend{
+    font-size: 1.1em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
